objects/ControlFetch__c/ControlFetch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ControlFetch</label>
</CustomObject>