objects/ControlFetch__c/fields/Allow_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to allow duplicate products in Inventory</inlineHelpText>
    <label>Allow Duplicate</label>
    <type>Checkbox</type>
</CustomField>