objects/ControlFetch__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required parts mandatory</description>
    <inlineHelpText>Uncheck to cancel error message Required parts mandatory in Service sheet</inlineHelpText>
    <label>Flag</label>
    <type>Checkbox</type>
</CustomField>