objects/ControlFetch__c/fields/Serial_Number_Check__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serial Number Check</label>
    <type>Checkbox</type>
</CustomField>