objects/ControlFetch__c/fields/TechnicianId__c.field-meta.xml
<CustomField>
    <fullName>TechnicianId__c</fullName>
    <label>TechnicianId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>