objects/ControlFetch__c/fields/Xero_Special_Character__c.field-meta.xml
<CustomField>
    <fullName>Xero_Special_Character__c</fullName>
    <label>Xero Special Character</label>
    <type>TextArea</type>
</CustomField>